<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory" >

    <!-- cancel button -->

    <Button
        android:id="@+id/order_measure_cancel_btn"
        style="@style/btnStyle"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/cancel" />

    <LinearLayout
        android:id="@+id/order_measure_comsumer_info"
        style="@style/orderMeasureLayoutStyle"
        android:layout_marginTop="@dimen/order_measure_layout_first_margin_top" >

        <TextView
            android:id="@+id/order_measure_sale_create_date_field"
            style="@style/orderMeasureTextViewStyle"
            android:text="@string/order_measure_sale_create_date" />

        <TextView
            android:id="@+id/order_measure_sale_create_date"
            style="@style/orderMeasureTextViewStyle"
            android:text="20140928160050" />

        <TextView
            android:id="@+id/order_measure_consumer_name_field"
            style="@style/orderMeasureTextViewStyle"
            android:text="@string/add_tab_customer_name" />

        <TextView
            android:id="@+id/order_measure_consumer_name"
            style="@style/orderMeasureTextViewStyle"
            android:text="John Wang" />

        <TextView
            android:id="@+id/order_measure_consumer_phone_number_field"
            style="@style/orderMeasureTextViewStyle"
            android:text="@string/add_tab_phone_number" />

        <TextView
            android:id="@+id/order_measure_consumer_phone_number"
            style="@style/orderMeasureTextViewStyle"
            android:text="02-1111-1111" />

        <TextView
            android:id="@+id/order_measure_send_note_msg"
            style="@style/orderMeasureTextViewStyle"
            android:text="@string/order_measure_send_note_msg" />

        <ToggleButton
            android:id="@+id/order_measure_send_note_msg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="No"
            android:textOn="Yes" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_measure_comsumer_info_2"
        style="@style/orderMeasureLayoutStyle"
        android:layout_below="@+id/order_measure_comsumer_info" >

        <TextView
            android:id="@+id/order_measure_case_name_field"
            style="@style/orderMeasureTextViewStyle"
            android:text="@string/order_measure_case_name" />

        <EditText
            android:id="@+id/order_measure_case_name"
            style="@style/inputTextStyle"
            android:layout_width="@dimen/order_measure_comsumer_info_2_edit_width"
            android:hint="@string/order_measure_case_name_hint" />

        <TextView
            android:id="@+id/order_measure_cant_description_field"
            style="@style/orderMeasureTextViewStyle"
            android:layout_marginLeft="@dimen/order_measure_comsumer_info_2_margin_left"
            android:text="@string/order_measure_cant_description" />

        <EditText
            android:id="@+id/order_measure_cant_description"
            style="@style/inputTextStyle"
            android:layout_width="@dimen/order_measure_comsumer_info_2_edit_width"
            android:hint="@string/order_measure_cant_description_hint" />

        <TextView
            android:id="@+id/order_measure_sale_progress_field"
            style="@style/orderMeasureTextViewStyle"
            android:layout_marginLeft="@dimen/order_measure_comsumer_info_2_margin_left"
            android:text="@string/order_measure_cant_sale_progress" />

        <Spinner
            android:id="@+id/order_measure_sale_progress_request"
            android:layout_width="@dimen/add_tab_txt_style_width"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_measure_consumer_address_layout"
        style="@style/orderMeasureLayoutStyle"
        android:layout_below="@+id/order_measure_comsumer_info_2" >

        <TextView
            android:id="@+id/order_measure_consumer_address_field"
            style="@style/orderMeasureTextViewStyle"
            android:text="@string/order_measure_consumer_address_msg" />

        <EditText
            android:id="@+id/order_measure_consumer_address"
            style="@style/inputTextStyle"
            android:hint="@string/order_measure_consumer_address_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_measure_consumer_contact_address_layout"
        style="@style/orderMeasureLayoutStyle"
        android:layout_below="@+id/order_measure_consumer_address_layout" >

        <CheckBox
            android:id="@+id/order_measure_as_above_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_measure_consumer_as_work_address"
            android:textColor="@color/black"
            android:textSize="@dimen/add_tab_txt_style_size" />

        <TextView
            android:id="@+id/order_measure_consumer_contact_address_field"
            style="@style/orderMeasureTextViewStyle"
            android:layout_marginLeft="@dimen/order_measure_comsumer_checkbox_margin_left"
            android:text="@string/order_measure_consumer_contact_address_msg" />

        <EditText
            android:id="@+id/order_measure_consumer_contact_address"
            style="@style/inputTextStyle"
            android:hint="@string/order_measure_consumer_contact_address_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_measure_consumer_comment_layout"
        style="@style/orderMeasureLayoutStyle"
        android:layout_below="@+id/order_measure_consumer_contact_address_layout" >

        <TextView
            android:id="@+id/order_measure_consumer_comment_field"
            style="@style/orderMeasureTextViewStyle"
            android:text="@string/order_measure_consumer_comment_msg" />

        <EditText
            android:id="@+id/order_measure_consumer_comment"
            style="@style/inputTextStyle"
            android:hint="@string/order_measure_consumer_comment_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_measure_consumer_selection_layout"
        style="@style/orderMeasureLayoutStyle"
        android:layout_below="@+id/order_measure_consumer_comment_layout" >

        <TextView
            android:id="@+id/order_measure_consumer_request_field"
            style="@style/orderMeasureTextViewStyle"
            android:text="@string/order_measure_consumer_request_msg" />

        <Spinner
            android:id="@+id/order_measure_consumer_request"
            android:layout_width="@dimen/add_tab_txt_style_width"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/order_measure_consumer_cost_field"
            style="@style/orderMeasureTextViewStyle"
            android:text="@string/order_measure_consumer_cost_msg" />

        <Spinner
            android:id="@+id/order_measure_consumer_cost"
            android:layout_width="@dimen/add_tab_txt_style_width"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_measure_consumer_date_time_layout"
        style="@style/orderMeasureLayoutStyle"
        android:layout_below="@+id/order_measure_consumer_selection_layout" >

        <TextView
            android:id="@+id/order_measure_consumer_date_time_field"
            style="@style/orderMeasureTextViewStyle"
            android:layout_gravity="center_vertical"
            android:text="@string/order_measure_consumer_date_time_msg" />

        <DatePicker
            android:id="@+id/order_measure_datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false" />

        <TimePicker
            android:id="@+id/order_measure_timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- new button -->

    <Button
        android:id="@+id/order_measure_save_btn"
        style="@style/btnStyle"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/save" />

</RelativeLayout>